moved image locations

--- a/projects.html
+++ b/projects.html
@@ -47,10 +47,10 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide"><img src="project pics/wordle menu.png" alt=""></div>
-            <div class="swiper-slide"><img src="project pics/wordle settings.png" alt=""></div>
-            <div class="swiper-slide"><img src="project pics/wordle game.png" alt=""></div>
-            <div class="swiper-slide"><img src="project pics/wordle stats.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/wordle-pics/wordle menu.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/wordle-pics/wordle settings.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/wordle-pics/wordle game.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/wordle-pics/wordle stats.png" alt=""></div>
             </div>
                 
             <!-- If we need navigation buttons -->
