updated projects page

--- a/projects.html
+++ b/projects.html
@@ -35,12 +35,29 @@
     <!--h3>Projects</h3-->
 
     <div class="container">
-        <h4>Command Line Chess</h4>
-        <p>During Fall 2023, I took CS246, where we chose to build chess</p>
+        <h4>Command Line Chess <a href="https://github.com/el6ine/cmd-line-chess"><i class="fa-solid fa-up-right-from-square"></i></a></h4>
+        <p>During Fall 2023, I took CS246, where we chose to build chess. This version is written in C++ with graphics built with XWindow.</p>
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide"><img src="assets/chess-pics/game human human.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/chess-pics/chess-move1.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/chess-pics/chess-invalid piece in way.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/chess-pics/chess-computercheck.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/chess-pics/chess-moveoutofcheck.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/chess-pics/chess-resign.png" alt=""></div>
+            </div>
+                
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
     </div>
 
     <div class="container">
-        <h4>Wordle +</h4>
+        <h4>Wordle + <a href="https://github.com/el6ine/wordle-plus"><i class="fa-solid fa-up-right-from-square"></i></a></h4>
         <p>I love word games, so I re-created a version of the game Wordle as a Java GUI. </p>
         <!-- Slider main container -->
         <div class="swiper">
@@ -57,7 +74,6 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
-    
 </div>
 </div>
 
