--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             of the University of Waterloo Debate Society). <br> I also love word games and I play the NYT mini crossword
             and Wordle every day (unless I forget). My current fastest time for the NYT mini crossword is 23 seconds. 
             <a href="https://www.nytimes.com/puzzles/leaderboards/invite/a98c1ecf-f7f1-472c-a4f0-964bdea7db43">Here's my NYT leaderboard!</a> <br><br>
-            <img src="assets/litwick1.png" alt="">    
+            <img src="assets/litwick1.png" alt="litwick!!!">    
         </div>
         </div>
 </body>
