minor formatting change

--- a/about.html
+++ b/about.html
@@ -28,15 +28,13 @@
         </div>
 
         <div id = "about">
-            <div id = "text-block">
                 <h4>hi! i'm elaine</h4> 
         <p>i'm currently a second year student majoring in computer science at the University of Waterloo. <br> <br>
             My interests outside of tech include crocheting, Pokemon and debate (and I'm currently a member
             of the University of Waterloo Debate Society). <br> I also love word games and I play the NYT mini crossword
-            and Wordle every day (unless I forget). My current fastest time for the NYT mini crossword is 23 seconds. 
+            and Wordle every day (unless I forget). <br> My current fastest time for the NYT mini crossword is 23 seconds. 
             <a href="https://www.nytimes.com/puzzles/leaderboards/invite/a98c1ecf-f7f1-472c-a4f0-964bdea7db43">Here's my NYT leaderboard!</a> <br><br>
             <img src="assets/litwick1.png" alt="litwick!!!">    
-        </div>
         </div>
 </body>
 </html>
