--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         </div>
 
         <div id = "about">
-                <h4>hi! i'm elaine</h4> 
+                <h4>Hi! I'm elaine</h4> 
         <p>i'm currently a second year student majoring in computer science at the University of Waterloo. <br> <br>
             My interests outside of tech include crocheting, Pokemon and debate (and I'm currently a member
             of the University of Waterloo Debate Society). <br> I also love word games and I play the NYT mini crossword
