updates !! (new resume + project :p)

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="contact-col1">
                 <h5>Contact Me!</h5>
-                <p><i class="fa-solid fa-envelope"></i> e32zhao@uwaterloo.ca</p>
+                <p><i class="fa-solid fa-envelope"></i> <a href="mailto:e32zhao@uwaterloo.ca">e32zhao@uwaterloo.ca</a> </p>
                 <div class="socials">
                     <a href="https://www.linkedin.com/in/elaine-zhao/"><i class="fa-brands fa-linkedin"></i></a>
                     <!--a href="https://www.facebook.com/elaine.zhao.3720"><i class="fa-brands fa-facebook"></i></a-->
