--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,25 @@
     <!--h3>Projects</h3-->
 
     <div class="container">
+        <h4>Directed Reading Program</h4>
+        <br>
+        <p>During my Spring 2024 Co-op term, I worked on a project as part of Waterloo Women in Mathematic's Directed Reading Program! <br>
+        With three other undergrad students, we worked with a C&O grad student to explore Tyshkevich Decompositions, 
+        <br> a way to decompose graphs into unique pieces (kinda like prime factorization). <br> <br>
+        Our final presentation is linked below! My partner and I's section starts at slide 13!!
+        <br>
+        <br>
+        </p>
+        <embed src="assets/S24_DRP_Presentation.pdf" width="750" height="500" type="application/pdf">
+        <br><br>
+        <p>I'll be participating in the Directed Research Project in Fall 2024, conducting original research into Tyshkevich Decompositions and other graph decompositions!</p>
+        <p>You can find out more about WiM and the DRP <a href="https://uwaterloo.ca/women-in-mathematics/past-drp-projects">here!</a> </p>
+    </div>
+    <br>
+
+    <div class="container">
         <h4>Command Line Chess <a href="https://github.com/el6ine/cmd-line-chess"><i class="fa-solid fa-up-right-from-square"></i></a></h4>
+        <br>
         <p>During Fall 2023, I took CS246, where we chose to build chess. This version is written in C++ with graphics built with XWindow.</p>
         <!-- Slider main container -->
         <div class="swiper">
@@ -55,9 +73,11 @@
             <div class="swiper-button-next"></div>
         </div>
     </div>
+    <br>
 
     <div class="container">
         <h4>Wordle + <a href="https://github.com/el6ine/wordle-plus"><i class="fa-solid fa-up-right-from-square"></i></a></h4>
+        <br>
         <p>I love word games, so I re-created a version of the game Wordle as a Java GUI. </p>
         <!-- Slider main container -->
         <div class="swiper">
