--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2> <a href="about.html"> about me! </a></h2>
         <h2> <a href="projects.html"> projects! </a></h2>
         <h2> <a href="contact.html"> contact me! </a></h2>
-        <h2> <a href="resume.pdf"> my resume!</a></h2>
+        <h2> <a href="assets/resume.pdf"> my resume!</a></h2>
         <div class="socials">
             <a href="https://github.com/el6ine"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/elaine-zhao/"><i class="fa-brands fa-linkedin"></i></a>
