resume + project update

--- a/about.html
+++ b/about.html
@@ -28,13 +28,18 @@
         </div>
 
         <div id = "about">
-                <h4>Hi! I'm elaine</h4> 
-        <p>i'm currently a second year student majoring in computer science at the University of Waterloo. <br> <br>
+                <h4>Hi! I'm Elaine!!</h4> 
+        <p>I'm currently a third year student majoring in Computer Science and planning to minor in Combinatorics & Optimization
+            at the University of Waterloo. <br> <br>
             My interests outside of tech include crocheting, Pokemon and debate (and I'm currently a member
-            of the University of Waterloo Debate Society). <br> I also love word games and I play the NYT mini crossword
-            and Wordle every day (unless I forget). <br> My current fastest time for the NYT mini crossword is 23 seconds. 
-            <a href="https://www.nytimes.com/puzzles/leaderboards/invite/a98c1ecf-f7f1-472c-a4f0-964bdea7db43">Here's my NYT leaderboard!</a> <br><br>
-            <img src="assets/litwick1.png" alt="litwick!!!">    
+            of the University of Waterloo Debate Society). <br> I also love word games and trivia!
+            <br> <br> 
+            <a href="https://www.nytimes.com/puzzles/leaderboards/invite/a98c1ecf-f7f1-472c-a4f0-964bdea7db43">Here's my NYT mini crossword leaderboard!</a> <br>
+            <a href="https://www.sporcle.com/user/eelaine/">and my Sporcle account!</a>
+            
+            <br><br>
+            <img src="assets/litwick1.png" alt="litwick!!!">  <br>
+            (my favourite pokemon is litwick)
         </div>
 </body>
 </html>
