minor css change :3

--- a/projects.html
+++ b/projects.html
@@ -37,9 +37,9 @@
     <div class="container">
         <h4>Directed Reading Program</h4>
         <br>
-        <p>During my Spring 2024 Co-op term, I worked on a project as part of Waterloo Women in Mathematic's Directed Reading Program! <br>
+        <p>During my Spring 2024 Co-op term, I worked on a project as part of Waterloo Women in Mathematic's Directed Reading Program!
         With three other undergrad students, we worked with a C&O grad student to explore Tyshkevich Decompositions, 
-        <br> a way to decompose graphs into unique pieces (kinda like prime factorization). <br> <br>
+        a way to decompose graphs into unique pieces (kinda like prime factorization). <br> <br>
         Our final presentation is linked below! My partner and I's section starts at slide 13!!
         <br>
         <br>
